# cobalt-aws

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  RELEASE.md  about.hbs  about.toml  deny.toml  docker-compose.yml  renovate.json  rust-dev.dockerfile
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: localstack.yml  test-examples.yml  tests.yml
examples/: README.md
examples/hello_lambda/: main.rs
examples/template/: main.rs
licenses/: licenses.html
proptest-regressions/s3/: multipartcopy.txt
scripts/: Dockerfile-awslocal  init-localstack.sh  read_and_validate_logs.sh  read_logs.sh  run_example.sh
scripts/dataeng-tooling-rust/: CHANGELOG.md  Dockerfile  Makefile  README.md
scripts/dataeng-tooling-rust/scripts/: cargo-hai-all-checks  check-pr.sh  check-version-increment.py  publish.sh  version-number.sh
src/: athena.rs  config.rs  lambda.rs  lib.rs  localstack.rs  s3.rs  sqs.rs  types.rs
src/s3/: async_multipart_put_object.rs  async_put_object.rs  mod.rs  multipartcopy.rs  s3_object.rs
test-data/some-prefix/: prefixed.txt
volume/cache/: machine.json  server.test.pem.crt  server.test.pem.key
volume/logs/: localstack_infra.err
