[package]
name = "cobalt-aws"
version = "0.13.2"
authors = ["harrison.ai Data Engineering <dataengineering@harrison.ai>"]
edition = "2021"
description = "This library provides a collection of wrappers around the aws-sdk-rust and lambda_runtime packages."
repository = "https://github.com/harrison-ai/cobalt-aws/"
license = "Apache-2.0"
publish = true
include = [
    "Cargo.toml",
    "src/*",
    "README.md",
    "CHANGELOG.md",
    "LICENCE",
    "licenses/licenses.html",
]

[dependencies]
anyhow = "1.0"
async-trait = "0.1.80"
aws-config = { version = "1.2.0", features = ["behavior-version-latest"] }
aws-sdk-athena = "1.21.0"
aws-sdk-s3 = "1.23.0"
aws-sdk-sqs = "1.20.0"
aws-smithy-async = "1.2.1"
aws-smithy-runtime-api = "1.4.0"
aws-types = "1.2.0"
aws_lambda_events = { version = "0.15", default-features = false, features = ["sqs"] }
bytes = "1.6.0"
bytesize = "1.3"
clap = { version = "4.5", features = ["derive", "env"] }
derivative = "2.2"
futures = "0.3"
http = "1.1"
lambda_runtime = "0.11.1"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.37", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
url = { version = "2.5", features = ["serde"] }

[dev-dependencies]
function_name = "0.3.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
reqwest = { version = "0.12.3", features = ["json"] }
serial_test = "3.0.0"
tokio-test = "0.4.4"
