[package]
name = "cobalt-aws"
version = "0.13.5"
authors = ["harrison.ai Data Engineering <dataengineering@harrison.ai>"]
edition = "2021"
description = "This library provides a collection of wrappers around the aws-sdk-rust and lambda_runtime packages."
repository = "https://github.com/harrison-ai/cobalt-aws/"
license = "Apache-2.0"
publish = true
include = [
    "Cargo.toml",
    "src/*",
    "README.md",
    "CHANGELOG.md",
    "LICENCE",
    "licenses/licenses.html",
]

[features]
default = ["s3", "sqs", "athena", "lambda"]
s3 = ["aws-smithy-async", "aws-sdk-s3"]
sqs = ["aws-sdk-sqs"]
athena = ["aws-sdk-athena"]
lambda = ["aws_lambda_events"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
aws-config = { version = "1.3.0", features = ["behavior-version-latest"] }
aws-sdk-athena = { version = "1.23.0", optional = true }
aws-sdk-s3 = { version = "1.25.0", optional = true }
aws-sdk-sqs = { version = "1.22.0", optional = true }
aws-smithy-async = { version = "1.2.1", optional = true }
aws-smithy-runtime-api = "1.5.0"
aws-types = "1.2.0"
aws_lambda_events = { version = "0.15", default-features = false, features = ["sqs", "s3"], optional = true }
bytes = "1.6.0"
bytesize = "1.3"
clap = { version = "4.5", features = ["derive", "env"] }
conv = "0.3.3"
derivative = "2.2"
derive_more = "0.99.17"
either = "1.12.0"
futures = "0.3"
http = "1.1"
lambda_runtime = "0.12.0"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0.61"
tokio = { version = "1.37", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
typed-builder = "0.19.0"
url = { version = "2.5", features = ["serde"] }

[dev-dependencies]
function_name = "0.3.0"
proptest = "1.4.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
reqwest = { version = "0.12.4", features = ["json"] }
serial_test = "3.1.1"
test-strategy = "0.4.0"
tokio-test = "0.4.4"
