[package]
name = "cobalt-aws"
version = "0.15.1"
authors = ["harrison.ai Data Engineering <dataengineering@harrison.ai>"]
edition = "2021"
description = "This library provides a collection of wrappers around the aws-sdk-rust and lambda_runtime packages."
repository = "https://github.com/harrison-ai/cobalt-aws/"
license = "Apache-2.0"
publish = true
include = [
    "Cargo.toml",
    "src/*",
    "README.md",
    "CHANGELOG.md",
    "LICENCE",
    "licenses/licenses.html",
]

[features]
default = ["s3", "sqs", "athena", "lambda"]
s3 = ["aws-smithy-async", "aws-sdk-s3"]
sqs = ["aws-sdk-sqs"]
athena = ["aws-sdk-athena"]
lambda = ["aws_lambda_events"]
test-utils = ["proptest"]


[dependencies]
anyhow = "1.0.89"
async-trait = "0.1.83"
aws-config = { version = "1.5.8", features = ["behavior-version-latest"] }
aws-sdk-athena = { version = "1.48.0", optional = true }
aws-sdk-s3 = { version = "1.54.0", optional = true }
aws-sdk-sqs = { version = "1.45.0", optional = true }
aws-smithy-async = { version = "1.2.1", optional = true }
aws-smithy-runtime-api = "1.7.2"
aws-types = "1.3.3"
aws_lambda_events = { version = "0.15.1", default-features = false, features = ["sqs", "s3"], optional = true }
bytes = "1.7.2"
bytesize = "1.3.0"
clap = { version = "4.5.20", features = ["derive", "env"] }
conv = "0.3.3"
derive_more = { version = "1.0.0", features = ["as_ref", "debug", "display", "from", "into"] }
either = "1.13.0"
futures = "0.3.31"
http = "1.1.0"
lambda_runtime = "0.13.0"
proptest = { version = "1.5.0", optional = true }
serde = "1.0.210"
serde_json = "1.0.128"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
typed-builder = "0.20.0"
url = { version = "2.5.2", features = ["serde"] }

[dev-dependencies]
assert_matches = "1.5.0"
function_name = "0.3.0"
proptest = "1.5.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
reqwest = { version = "0.12.8", features = ["json"] }
serial_test = "3.1.1"
test-strategy = "0.4.0"
tokio-test = "0.4.4"
